sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (i = n+1) {i=0}
        ^